code cleanup, save videos in 'videos' folder

--- a/main.html
+++ b/main.html
@@ -12,7 +12,7 @@
     <h1 class="marquee">
         <span>m҉o҉s҉h҉r҉o҉o҉m҉</span>
     </h1>
-    <button id="choosevideobtn">Choose Video</button>
+    <button id="choosevideobtn">Basic Mosh</button>
     <!-- <canvas id="glcontext" touch-action="none"></canvas> -->
     <!-- <script src="3d.js"></script> -->
     <script>
